fix: configurar CORS para kosmica.com.co y ajustar pool Hikari